--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
       href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
       rel="stylesheet"
     />
+    <style>
+      .text-dark {
+        color: #3f51b5;
+      }
+      </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
