--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/0.png" />
-    <link rel="apple-touch-icon" sizes="200x200" href="%PUBLIC_URL%/0.png" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="shortcut icon" href="0.png" />
+    <link rel="apple-touch-icon" sizes="200x200" href="0.png" />
     <!--     Fonts and icons     -->
     <link
       rel="stylesheet"
